changes to login page and unsaturated jupyter

--- a/jupyter/skel/unsaturated_2Dflow/unsaturated_2Dflow.ipynb
+++ b/jupyter/skel/unsaturated_2Dflow/unsaturated_2Dflow.ipynb
@@ -92,7 +92,7 @@
     "\\end{equation}\n",
     "Here $m = 1 - 1/n$, $n>1$.\n",
     "\n",
-    "The values of the parameters used in this tutorial have been chosen as follows: $K_s = 0.01 \\,\\text{mm/s}, \\ell = 0.5, \\theta_r = 0.0, \\theta_s = 0.17, \\theta_m = 0.17, n = 2.8, \\alpha = 0.06 \\,\\text{mm}^{-1}$ and $h_s = 0.0$, see [[Aslannejad, 2017]](#aslannejad_2017).\n",
+    "The values of the parameters used in this tutorial have been chosen as follows: $K_s = 0.02 \\,\\text{mm/s}, \\ell = 0.5, \\theta_r = 0.0, \\theta_s = 0.17, \\theta_m = 0.17, n = 2.8, \\alpha = 0.06 \\,\\text{mm}^{-1}$ and $h_s = 0.0$, see [[Aslannejad, 2017]](#aslannejad_2017).\n",
     "\n",
     "The boundary conditions are divided into two parts (see Figure 1); one that prescribes the pressure \n",
     "head $h$ on a given part of the boundary $\\Gamma_1$, the other one prescribes the flux on \n",
@@ -222,30 +222,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb97533",
+   "id": "91aadbfc",
    "metadata": {},
    "source": [
-    "> ***Notes:*** <br> \n",
-    "> Later on, when you will want to create more complicated geometries you can use Boolean operations:\n",
-    "`\n",
-    "Geometry -> Elementary entities -> Boolean\n",
-    "`.\n",
-    "> For Boolean to work correctly for 2D surfaces, all of them have to have the same orientation. Consistency in the orientation can be achieved by:\n",
-    "> - always creating shapes starting from bottom left and ending top right\n",
-    "> - making sure the node numbering is anticlockwise\\\n",
-    "(if you want to see your point numbering tick the **Point labels** box in the next picture)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "solved-breed",
-   "metadata": {},
-   "source": [
-    "## Physical groups\n",
-    "\n",
-    "Physical groups refer to regions in the domain where various values are prescribed, for example, boundary conditions, \n",
-    "initial conditions, material parameters etc. For the problem under consideration, we only need two types of physical groups, initial \n",
-    "and boundary conditions. Now go back to our rectangle in Gmsh. Note that every  **Point**, **Line** or **Plane** is allocated a unique ID by Gmsh \n",
+    "Note that every  **Point**, **Line** or **Plane** is allocated a unique ID by Gmsh \n",
     "as it is created, automatically. To view such IDs, under the **Tools** Menu choose **Options**, and in the dialogue box that appears\n",
     "press on the **Geometry** menu on the left then under **Visibility** check **Curve labels** and **Surface labels** then close the dialogue box."
    ]
@@ -261,6 +241,40 @@
    "metadata": {},
    "source": [
     "![option_vis.png](attachment:option_vis.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb97533",
+   "metadata": {},
+   "source": [
+    "> ***Notes:*** <br> \n",
+    "> Later on, when you will want to create more complicated geometries you can use Boolean operations:\n",
+    "`\n",
+    "Geometry -> Elementary entities -> Boolean\n",
+    "`.\n",
+    "> For Boolean to work correctly for 2D surfaces, all of them have to have the same orientation. Consistency in the orientation can be achieved by:\n",
+    "> - always creating shapes starting from bottom left and ending top right\n",
+    "> - making sure the node numbering is anticlockwise\\\n",
+    "(if you want to see your point numbering tick the **Point labels** box in the picture above)\n",
+    "\n",
+    "> Some elementary entities (e.g. Rectangle) create a surface straight away and some do not (e.g. Circle) \n",
+    "> - to create a surface in enclosed boundary use \n",
+    "`\n",
+    "Geometry -> Elementary entities -> Add -> Plane surface\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "solved-breed",
+   "metadata": {},
+   "source": [
+    "## Physical groups\n",
+    "\n",
+    "Physical groups refer to regions in the domain where various values are prescribed, for example, boundary conditions, \n",
+    "initial conditions, material parameters etc. For the problem under consideration, we only need two types of physical groups, initial \n",
+    "and boundary conditions. Now go back to our rectangle in Gmsh."
    ]
   },
   {
@@ -436,7 +450,7 @@
    "id": "7f49c1a9",
    "metadata": {},
    "source": [
-    "## Set directories (no change needed)"
+    "## Set directories and import python libraries (no change needed)"
    ]
   },
   {
@@ -444,6 +458,10 @@
    "execution_count": null,
    "id": "initial-function",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:36:40.933244Z",
+     "start_time": "2024-01-21T16:36:34.784888Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -457,7 +475,23 @@
     "toold = \"~/um_view/bin\"\n",
     "unsaturated_flow = \"~/um_view/softmech/unsaturated_2Dflow/unsatu2dFlow_prob\"\n",
     "!ls {unsaturated_flow}\n",
-    "# if you get error executing this cell, check the spelling of your MED file"
+    "# if you get error executing this cell, check the spelling of your MED file\n",
+    "\n",
+    "# import required python libraries for post processing\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pyvista as pv\n",
+    "from pyvirtualdisplay import Display\n",
+    "import glob\n",
+    "pv.set_plot_theme(\"document\")\n",
+    "\n",
+    "from pyvirtualdisplay import Display\n",
+    "display = Display(backend=\"xvfb\", visible=False, size=(1024, 768))\n",
+    "display.start()\n",
+    "\n",
+    "import ipywidgets\n",
+    "from ipywidgets import Play, IntProgress, link, HBox, AppLayout, Dropdown, VBox, FloatRangeSlider, jslink, GridspecLayout\n",
+    "import ipygany\n",
+    "from ipygany import Scene, PolyMesh, TetraMesh, IsoColor, Threshold, IsoSurface, colormaps, ColorBar"
    ]
   },
   {
@@ -473,13 +507,17 @@
    "execution_count": null,
    "id": "signal-publicity",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:36:40.960988Z",
+     "start_time": "2024-01-21T16:36:40.936081Z"
+    },
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "mesh_file_name = \"paper_network.med\"  # replace with the mesh file you'd like to work with\n",
     "\n",
-    "saturated_conductivity = 0.01 # set saturated_conductivity of the paper\n",
+    "saturated_conductivity = 0.02 # set saturated_conductivity of the paper\n",
     "# 1e-12 m^2 = 0.01 mm/s = 1 Darcy\n",
     "time_step = 0.1 # set how big time steps the analysis should use\n",
     "final_time = 120 # time at which analysis will stop\n",
@@ -503,9 +541,9 @@
    "source": [
     "In the cell above, you can set up the main variables, which are used in this analysis. Change the `mesh_file_name` to the MED file you uploaded. \n",
     "\n",
-    "The saturated conductivity, $K_s$, for paper varies with the type of paper used. If you want to, you can find your own and input it for `saturated_conductivity`. We took one of the values from a graph in [The anisotropic permeability of paper](https://smartech.gatech.edu/bitstream/handle/1853/3341/tps-298.pdf) on page 26. The units you might encounter vary and you can use the following approximate formula for converting: \n",
+    "The saturated conductivity, $K_s$, for paper varies with the type of paper used. If you want to, you can find your own value for this. The units you might encounter vary. Most of the time you will encounter permeability in Darcy (unit) and you can use the following approximate formula for converting: \n",
     "$$ 1 \\,\\text{Darcy} \\approx 10^{-12} \\,\\text{m}^2 \\approx 0.01 \\text{mm/s} $$\n",
-    "The units of $K_s$ required as input are $\\text{mm/s}$. This will assume that your mesh is in $\\text{mm}$ and resulting time will be in seconds.\n",
+    "The units of $K_s$ required as input are $\\text{mm/s}$. This will assume that your mesh is in $\\text{mm}$ and the resulting time will be in seconds.\n",
     "\n",
     "`final_time` and `time_step` control the analysis. Time starts at $t = 0s$, and `time_step` defines the next point of time at which the analysis is performed. The time will keep increasing by `time_step` until it reaches `final_time`. `save_step` decides which files to save. If `save_step` $= 4$, analysis steps number 0, 4, 8, etc., will be saved."
    ]
@@ -523,6 +561,10 @@
    "execution_count": null,
    "id": "starting-single",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:36:42.820736Z",
+     "start_time": "2024-01-21T16:36:40.963073Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -553,6 +595,10 @@
    "execution_count": null,
    "id": "piano-amendment",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:37:01.260153Z",
+     "start_time": "2024-01-21T16:36:42.823304Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -571,76 +617,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e7e3821",
+   "metadata": {},
+   "source": [
+    "### Convert analysis results (no change needed)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "555a20c7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:37:11.526064Z",
+     "start_time": "2024-01-21T16:37:01.262132Z"
+    },
+    "code_folding": [
+     5
+    ]
+   },
    "outputs": [],
    "source": [
     "!ls out*h5m # check which output files were created during analysis\n",
     "# converting analysis files to format readable by post processors\n",
-    "!{toold}/convert.py -np 4 out*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84d444d6",
-   "metadata": {},
-   "source": [
-    "The format of output files which can be read by the postprocessing tools is VTK. If you want more flexibility than is provided in this notebook, you can download these and open them in programs like [Paraview](https://www.paraview.org)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd0ee071",
-   "metadata": {},
-   "source": [
-    "## Plot initial solution on the mesh (no change needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb3e5f9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import required python libraries for post processing\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pyvista as pv\n",
-    "from pyvirtualdisplay import Display\n",
-    "import glob\n",
-    "pv.set_plot_theme(\"document\") # needed?\n",
-    "\n",
-    "# plot the mesh and result of the first step of the analysis\n",
-    "display = Display(backend=\"xvfb\", visible=True, size=(1200, 800))\n",
-    "display.start()\n",
-    "my_cmap = plt.cm.get_cmap(\"summer\", 24)\n",
-    "mesh = pv.read(\"out_level_0.vtk\") \n",
-    "mesh.plot(show_edges=True, cpos = \"xy\", scalars=\"h1\", cmap = my_cmap)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2228da58",
-   "metadata": {},
-   "source": [
-    "## Plot evolution of the solution in time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8798a059",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import ipywidgets\n",
-    "from ipywidgets import Play, IntProgress, link, HBox, AppLayout, Dropdown, VBox, FloatRangeSlider, jslink, GridspecLayout\n",
-    "import ipygany\n",
-    "from ipygany import Scene, PolyMesh, TetraMesh, IsoColor, Threshold, IsoSurface, colormaps, ColorBar\n",
+    "!{toold}/convert.py -np 4 out*\n",
     "\n",
     "# run but ignore - remove GLOBAL_ID field from VTK files\n",
     "def remove_global_id_scalars(mask):\n",
@@ -663,9 +664,70 @@
     "                        start_line = number\n",
     "                        found = True\n",
     "                if not found or number not in range(start_line, start_line+scalars_num+2):\n",
-    "                    f.write(line)                 \n",
-    "remove_global_id_scalars(\"out_level_*.vtk\")\n",
+    "                    f.write(line) \n",
+    "                    \n",
+    "remove_global_id_scalars(\"out_level_*.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84d444d6",
+   "metadata": {},
+   "source": [
+    "The format of output files which can be read by the postprocessing tools is VTK. If you want more flexibility than is provided in this notebook, you can download these and open them in programs like [Paraview](https://www.paraview.org)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd0ee071",
+   "metadata": {},
+   "source": [
+    "## Plot initial solution on the mesh (no change needed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb3e5f9e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:37:15.263190Z",
+     "start_time": "2024-01-21T16:37:11.528240Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mesh = pv.read(\"out_level_0.vtk\") \n",
+    "mesh = mesh.shrink(0.98)\n",
     "\n",
+    "p = pv.Plotter(notebook=True)\n",
+    "p.add_mesh(mesh, smooth_shading=False)\n",
+    "\n",
+    "p.camera_position = \"xy\"\n",
+    "p.show(jupyter_backend='ipygany')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2228da58",
+   "metadata": {},
+   "source": [
+    "## Plot evolution of the solution in time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8798a059",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:37:15.446310Z",
+     "start_time": "2024-01-21T16:37:15.276272Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "# get the mesh & results from vtks\n",
     "mesh = PolyMesh.from_vtk('out_level_0.vtk')\n",
     "def load_step(change):\n",
@@ -756,7 +818,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "77060a2d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-21T16:37:16.247190Z",
+     "start_time": "2024-01-21T16:37:15.448516Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -828,11 +895,12 @@
     "Physical Surface(\"INITIAL\", 2) = {3};\n",
     "`\n",
     "   \n",
-    "   Understand what each line is about. Create the corresponding mesh and execute the code with it. Now create a geometry such as this\n",
+    "Understand what each line is about. Create the corresponding mesh and execute the code with it. Now create a geometry such as this\n",
+    "<img src=\"http://mofem.eng.gla.ac.uk/mofem/html/star_geo.png\" width=\"800\">\n",
     "   \n",
-    "   <img src=\"http://mofem.eng.gla.ac.uk/mofem/html/star_geo.png\" width=\"800\">\n",
+    "Create a mesh with it and run the code using the mesh. \n",
     "   \n",
-    "   Create a mesh with it and run the code using the mesh. "
+    "Now you can create your own designs and run them in this notebook to see how they behave."
    ]
   }
  ],
