darcy conversion explanation

--- a/jupyter/skel/unsaturated_2Dflow/unsaturated_2Dflow.ipynb
+++ b/jupyter/skel/unsaturated_2Dflow/unsaturated_2Dflow.ipynb
@@ -459,8 +459,8 @@
    "id": "initial-function",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:36:40.933244Z",
-     "start_time": "2024-01-21T16:36:34.784888Z"
+     "end_time": "2024-01-21T22:47:40.788624Z",
+     "start_time": "2024-01-21T22:47:39.457663Z"
     },
     "scrolled": true
    },
@@ -508,8 +508,8 @@
    "id": "signal-publicity",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:36:40.960988Z",
-     "start_time": "2024-01-21T16:36:40.936081Z"
+     "end_time": "2024-01-21T22:47:40.831780Z",
+     "start_time": "2024-01-21T22:47:40.791271Z"
     },
     "scrolled": true
    },
@@ -541,11 +541,11 @@
    "source": [
     "In the cell above, you can set up the main variables, which are used in this analysis. Change the `mesh_file_name` to the MED file you uploaded. \n",
     "\n",
-    "The saturated conductivity, $K_s$, for paper varies with the type of paper used. If you want to, you can find your own value for this. The units you might encounter vary. Most of the time you will encounter permeability in Darcy (unit) and you can use the following approximate formula for converting: \n",
-    "$$ 1 \\,\\text{Darcy} \\approx 10^{-12} \\,\\text{m}^2 \\approx 0.01 \\text{mm/s} $$\n",
-    "The units of $K_s$ required as input are $\\text{mm/s}$. This will assume that your mesh is in $\\text{mm}$ and the resulting time will be in seconds.\n",
+    "The simulation requires setting the saturated hydraulic conductivity, $K_s$, for paper. The units of $K_s$ required as input are $\\text{mm/s}$. This will assume that your mesh is in $\\text{mm}$ and the resulting time will be in seconds.\n",
     "\n",
-    "`final_time` and `time_step` control the analysis. Time starts at $t = 0s$, and `time_step` defines the next point of time at which the analysis is performed. The time will keep increasing by `time_step` until it reaches `final_time`. `save_step` decides which files to save. If `save_step` $= 4$, analysis steps number 0, 4, 8, etc., will be saved."
+    "If you want to, you can find your own value for $K_s$. Note that this value varies with the type of paper used, and the units you might encounter vary. Most of the time you will encounter another parameter - permeability, $k$, which is measured in $\\text{Darcy}$ (unit), $1 \\,\\text{Darcy} \\approx 10^{-12} \\,\\text{m}^2$. Furthermore, for water, the permeability of $k = 1 \\,\\text{Darcy}$ corresponds to the hydraulic conductivity $K_s \\approx 0.01\\,\\text{mm/s}$.\n",
+    "\n",
+    "Parameters `final_time` and `time_step` control the analysis. Time starts at $t = 0s$, and `time_step` defines the next point of time at which the analysis is performed. The time will keep increasing by `time_step` until it reaches `final_time`. `save_step` decides which files to save. If `save_step` $= 4$, analysis steps number 0, 4, 8, etc., will be saved."
    ]
   },
   {
@@ -562,8 +562,8 @@
    "id": "starting-single",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:36:42.820736Z",
-     "start_time": "2024-01-21T16:36:40.963073Z"
+     "end_time": "2024-01-21T22:47:41.391736Z",
+     "start_time": "2024-01-21T22:47:40.848255Z"
     },
     "scrolled": true
    },
@@ -596,8 +596,8 @@
    "id": "piano-amendment",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:37:01.260153Z",
-     "start_time": "2024-01-21T16:36:42.823304Z"
+     "end_time": "2024-01-21T22:48:00.713537Z",
+     "start_time": "2024-01-21T22:47:41.394670Z"
     },
     "scrolled": true
    },
@@ -630,8 +630,8 @@
    "id": "555a20c7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:37:11.526064Z",
-     "start_time": "2024-01-21T16:37:01.262132Z"
+     "end_time": "2024-01-21T22:48:10.194067Z",
+     "start_time": "2024-01-21T22:48:00.715845Z"
     },
     "code_folding": [
      5
@@ -691,8 +691,8 @@
    "id": "cb3e5f9e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:37:15.263190Z",
-     "start_time": "2024-01-21T16:37:11.528240Z"
+     "end_time": "2024-01-21T22:48:10.707218Z",
+     "start_time": "2024-01-21T22:48:10.196429Z"
     }
    },
    "outputs": [],
@@ -721,8 +721,8 @@
    "id": "8798a059",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:37:15.446310Z",
-     "start_time": "2024-01-21T16:37:15.276272Z"
+     "end_time": "2024-01-21T22:48:10.860119Z",
+     "start_time": "2024-01-21T22:48:10.720450Z"
     },
     "scrolled": false
    },
@@ -820,8 +820,8 @@
    "id": "77060a2d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-21T16:37:16.247190Z",
-     "start_time": "2024-01-21T16:37:15.448516Z"
+     "end_time": "2024-01-21T22:48:11.474661Z",
+     "start_time": "2024-01-21T22:48:10.862062Z"
     }
    },
    "outputs": [],
