--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -38,6 +38,7 @@
   - Ross Williams, The University of Glasgow, Scotland, UK
   - Joshua Gorham, The University of Glasgow, Scotland, UK
   - MD Tanzib Ehsan Sanglap, The University of Glasgow, Scotland, UK
+  - Yingjia (Leo) Gao, The University of Glasgow, Scotland, UK
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/danielebarbera/">Daniele Barbera</a>, Advanced Forming Research Centre, Scotland, UK
 
 \section mofem_users_modules_past_contributors Past Contributors
