--- a/mofem/doc/main.dox
+++ b/mofem/doc/main.dox
@@ -148,7 +148,7 @@
                     parallel processing on desktop computers and high-performance clusters. Its modular 
                     structure allows for development of open modules and private 
                     sensitive projects. It is designed to suit both researchers
-                    developing computer methods and engineers solving undustrial problems.
+                    developing computer methods and engineers solving industrial problems.
                 </td>
 
                 <td style="text-align:left;background-color:#FAFAFA;padding:12px" valign="top"><a
